--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,7 +1,19 @@
 /* some style */
 
+body {
+  margin: 10px;
+}
+
+nav.tab-navigation{
+  margin-top: 10px;
+}
+
 div.report-list {
-  margin-left: 10px;
+  margin: 0;
+  background-color: white;
+  border-top: 0px transparent;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
 
 div.report-list div.report-list-left{
