--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -111,10 +111,8 @@ nav.tab-navigation{
 
 div.report-list {
   margin: 0;
+  margin-top: 10px;
   background-color: white;
-  border-top: 0px transparent;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
 }
 
 div.report-list div.report-list-left{
