--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -200,3 +200,28 @@ span img.user-icon{
   width: 20px;
   margin-right: 5px;
 }
+
+div.new-finance h2{
+  text-align: center;
+}
+
+div.new-finance div.link-bar{
+  text-align: center;
+}
+
+div.new-finance div.link-bar a.finances-link{
+  text-decoration: underline;
+  margin: 10px;
+}
+
+div.new-finance div.link-bar a.finances-link.active{
+  text-decoration: none;
+}
+
+div.new-finance div.finances-body div.section{
+  text-align: center;
+}
+
+div.new-finance div.finances-body div.section h3{
+  margin-bottom: 0px;
+}
