--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -201,27 +201,27 @@ span img.user-icon{
   margin-right: 5px;
 }
 
-div.new-finance h2{
+div.finances h2{
   text-align: center;
 }
 
-div.new-finance div.link-bar{
+div.finances div.link-bar{
   text-align: center;
 }
 
-div.new-finance div.link-bar a.finances-link{
+div.finances div.link-bar a.finances-link{
   text-decoration: underline;
   margin: 10px;
 }
 
-div.new-finance div.link-bar a.finances-link.active{
+div.finances div.link-bar a.finances-link.active{
   text-decoration: none;
 }
 
-div.new-finance div.finances-body div.section{
+div.finances div.finances-body div.section{
   text-align: center;
 }
 
-div.new-finance div.finances-body div.section h3{
+div.finances div.finances-body div.section h3{
   margin-bottom: 0px;
 }
