--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -274,6 +274,10 @@ div.rich-eidor-container div.rich-editor{
   width: 100%;
 }
 
+div.rich-editor-container div.rich-editor-save button.cancel-button{
+  margin-left: 10px;
+}
+
 .comp-cell {
   border: 2px solid transparent;
   width: 170px;
@@ -323,4 +327,40 @@ div.rich-eidor-container div.rich-editor{
   border: 0px solid black;
   outline: none;
   text-align: left;
+}
+
+div.editable-title-container{
+  width: 600px;
+  position: relative;
+  left: 50%;
+  margin-left: -300px;
+  height: 37px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+div.editable-title-container h2, div.editable-title-container input {
+  color: black;
+  font-size: 30px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 37px;
+/*  float: left;*/
+}
+
+div.editable-title-container h2{
+  border: 1px solid white;
+  outline: none;
+  padding-top: 1px;
+}
+
+div.editable-title-container input{
+  border: 1px solid black;
+  outline: none;
 }
