--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -339,7 +339,9 @@ div.editable-title-container{
   margin-bottom: 10px;
 }
 
-div.editable-title-container h2, div.editable-title-container input {
+div.editable-title-container h2,
+div.editable-title-container input,
+div.editable-title-container span.hidden-span{
   color: black;
   font-size: 30px;
   font-family: inherit;
@@ -352,6 +354,10 @@ div.editable-title-container h2, div.editable-title-container input {
   width: 100%;
   height: 37px;
 /*  float: left;*/
+}
+
+div.editable-title-container span.hidden-span{
+  opacity: 0;
 }
 
 div.editable-title-container h2{
