--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -472,11 +472,15 @@ a.settings i{
   font-size: 18px;
 }
 
-div.revisions-navigator{
+div.simple-section-revisions-navigator{
   width: 600px;
   left: 50%;
   margin-left: 300px;
-  height: 50px;
+}
+
+div.revisions-navigator{
+  width: 100%;
+  height: 34px;
 }
 
 div.revisions-navigator div.revisions-navigator-left{
