--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -250,6 +250,10 @@ div.finances div.finances-body div.section h3{
   margin-bottom: 0px;
 }
 
+div.finances div.finances-body div.section h3 span{
+  margin-left: 24px;
+}
+
 div.finances div.finances-body div.section div.chart-container{
   position: relative;
   left: 50%;
