--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -296,6 +296,10 @@ div.rich-editor-container {
   margin-top: 30px;
 }
 
+div.rich-editor-container div.rich-editor.no-data{
+  color: lightgray;
+}
+
 div.rich-editor-container div.rich-editor,
 div.rich-editor-container div.fake-rich-editor{
   width: 100%;
