fix recent-updates list

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -479,6 +479,7 @@ div.recent-updates{
 
 div.recent-updates ul.recent-updates-list{
   width: 300px;
+  top: auto;
 }
 
 div.recent-updates div.recent-updates-item{
