--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -340,7 +340,21 @@ div.rich-editor-container div.rich-editor a{
 
 div.rich-editor-container div.rich-editor.collapsed{
   overflow: hidden;
-  max-height: 200px;
+  max-height: 300px;
+  position: relative;
+}
+
+div.rich-editor-container div.rich-editor.collapsed:after{
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: linear-gradient(
+    to top,
+    rgba(255,255,255, 1) -20%,
+    rgba(255,255,255, 0) 100%
+  );
 }
 
 div.rich-editor-container button.collapse-button{
