add fallback fonts to verdana and sans-serif

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,7 +1,7 @@
 /* some style */
 
 html, body{
-  font-family: "Proxima nova";
+  font-family: "Proxima Nova Regular", "Verdana", "sans-serif";
 }
 
 a{
