fix css text style

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,7 +1,7 @@
 /* some style */
 
 html, body{
-  font-family: "Proxima Nova Regular", "Verdana", "sans-serif";
+  font-family: "proxima-nova", sans-serif;
 }
 
 a{
