--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -67,7 +67,7 @@ a:hover, a:hover *{
  * Main content
  */
  .main {
-    padding: 0px 20px 0px 20px;
+    padding: 0px !important;
 }
 @media (min-width: 768px) {
     .main {
@@ -777,4 +777,55 @@ button.oc-btn.oc-success{
 
 button.oc-btn.oc-cancel{
   color: rgba(0, 0, 0, 0.4);
+}
+
+div.sections-container{
+  position: relative;
+  width: 600px;
+  margin-left: -300px;
+  left: 50%;
+}
+
+div.table-of-contents{
+  position: relative;
+  padding: 10px;
+  color: #2D2D2D;
+}
+
+div.table-of-contents div.table-of-contents-inner{
+  width: 100%;
+  height: 100%;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category{
+  margin-left: 30px;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category h3{
+  font-size: 16px;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category-section{
+  margin-left: 60px;
+  margin-top: 20px;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category-section a,
+div.table-of-contents div.table-of-contents-inner div.category-section a:hover,
+div.table-of-contents div.table-of-contents-inner div.category-section a:active,
+div.table-of-contents div.table-of-contents-inner div.category-section a:visited{
+  text-decoration: none;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category-section a p.section-title{
+  color: #2D2D2D;
+  font-size: 16px;
+  margin-bottom: 0px;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category-section a p.section-date{
+  color: #5B5B5B;
+  font-weight: lighter;
+  font-size: 11px;
+  margin-bottom: 0px;
 }
