Style category headers as bold and upper case per the redline.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -817,6 +817,8 @@ div.table-of-contents div.table-of-contents-inner div.category{
 
 div.table-of-contents div.table-of-contents-inner div.category h3{
   font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 div.table-of-contents div.table-of-contents-inner div.category-section{
