--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -815,6 +815,10 @@ div.table-of-contents div.table-of-contents-inner div.category{
   margin-left: 30px;
 }
 
+div.table-of-contents div.table-of-contents-inner div.category.empty{
+  color: rgba(0, 0, 0, 0.4);
+}
+
 div.table-of-contents div.table-of-contents-inner div.category h3{
   font-size: 16px;
   text-transform: uppercase;
