--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -399,6 +399,7 @@ div.rich-editor-container div.rich-editor.collapsed{
 div.rich-editor-container div.rich-editor.collapsed:after{
   bottom: 0;
   position: absolute;
+  left: 0px;
   width: 100%;
   height: 100%;
   content: "";
