--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -266,6 +266,7 @@ div.composed-section div.link-bar a.composed-section-link{
   margin-left: 0px;
   margin-right: 60px;
   font-size: 16px;
+  display: inline-block;
 }
 
 div.composed-section div.link-bar a.composed-section-link.active{
